# finpay-rs

./: .env.example  .gitignore  Cargo.toml  Justfile  README.md  architecture.md  design.md  docker-compose.yaml  how.md  package-lock.json  package.json  test.md
.github/workflows/: rust.yml
crates/finpay_imagekit/: Cargo.toml
crates/finpay_kafka/: Cargo.toml
crates/finpay_kafka/src/: lib.rs
crates/finpay_mailer/: Cargo.toml
crates/finpay_mailer/src/: confirm_email.rs  email.rs  email_client.rs  errors.rs
crates/finpay_mailer/templates/: confirm_email.html
crates/finpay_redis/: Cargo.toml
crates/finpay_redis/src/: error.rs  lib.rs  redis.rs
finpay/: .dockerignore  .env.example  .gitignore
finpay/crates/finpay_imagekit/: Cargo.toml
finpay/crates/finpay_imagekit/src/: error.rs
finpay/crates/finpay_mailer/src/: email_client.rs  forgotten_password.rs
finpay/crates/finpay_mailer/templates/: confirm_email.html  welcome.html
finpay/crates/finpay_redis/src/: lib.rs
finpay/crates/finpay_utils/: Cargo.toml
finpay/crates/finpay_utils/src/: extract_env.rs
finpay/migrations/: 20250903005240_create_user_information_table.sql  20250906103318_rename_otp_table.sql  20250912214153_create_countries_table.sql  20250916232120_create_wallet_table.sql  20250919113548_add_balance_to_wallet_.sql
finpay/scripts/: kafka_create-topic.js  kafka_open-shell.js  kafka_produce.js  module.js  package.json  seed_banks.js
finpay/scripts/seed/: kafka-topics.json
finpay/scripts/sql/: seed_banks.sql  seed_countries.sql
finpay/src/: main.rs
finpay/src/accounts/: adapters.rs  mod.rs  repository.rs  service.rs
finpay/src/authentication/: claims.rs  handlers.rs  router.rs
finpay/src/banks/: service.rs
finpay/src/config/: env.rs  filesystem.rs  mod.rs  tasks.rs
finpay/src/countries/: entities.rs
finpay/src/errors/: extractor.rs  mod.rs  service.rs
finpay/src/security/otp/: adapter.rs
finpay/src/shared/: mod.rs
finpay/src/shared/middlewares/: authentication_middleware.rs  validator.rs
finpay/src/users/: enums.rs  mod.rs
finpay/src/utils/: api_response.rs
finpay/src/wallet/: adapters.rs  entities.rs  mod.rs  repository.rs  service.rs
finpay/tests/: app.rs
freya/: Cargo.toml  README.md
macro/: package.json
macro/pages/: index.vue
midgard/: Cargo.toml  docker-compose.yaml
midgard/migrations/: 20251001171542_create_country_table.sql
midgard/src/: app.rs  config.rs  database.rs  entities.rs  errors.rs  handlers.rs  lib.rs  main.rs  repository.rs  router.rs  service.rs  state.rs  utils.rs
migrations/: 20250906103932_drop_updated_at_from_otp_table.sql  20250912214153_create_countries_table.sql  20250919111859_auto_update_updated_at_for_wallet.sql  20250919221528_seed_banks_.sql
odin/: Cargo.toml  Justfile  README.md  docker-compose.yaml
odin/crates/odin_imagekit/: Cargo.toml
odin/crates/odin_kafka/: Cargo.toml
odin/crates/odin_kafka/src/: producer.rs
odin/crates/odin_redis/: Cargo.toml
odin/crates/odin_redis/src/: redis.rs
odin/crates/odin_utils/: Cargo.toml
odin/docker/dev/: Dockerfile
odin/docker/prod/: Dockerfile
odin/migrations/: 20250906070620_create_one_time_password_table.sql  20250912182442_add_avatar_url_to_users.sql
odin/src/: lib.rs  main.rs  router.rs  state.rs
odin/src/authentication/: adapter.rs  claims.rs  mod.rs  service.rs
odin/src/config/: env.rs  mod.rs
odin/src/errors/: app.rs  service.rs
odin/src/security/otp/: entities.rs  service.rs
odin/src/shared/middlewares/: mod.rs
odin/src/users/: entities.rs  router.rs
odin/src/utils/: api_response.rs  mod.rs  pagination.rs
scripts/: banks.js  country.js  country_identifier.json  currency.js  kafka_consumer.js  kafka_describe-topic.js  module.js  package-lock.json  package.json  seed_countries.sql  seed_currency.js
scripts/sql/: seed_countries.sql
src/: app.rs  lib.rs  main.rs  router.rs  state.rs
src/accounts/: mod.rs
src/authentication/: adapter.rs  claims.rs  handlers.rs  mod.rs  router.rs  service.rs
src/banks/: entities.rs  handlers.rs  mod.rs  repository.rs  router.rs
src/config/: database.rs  env.rs  kafka.rs  mod.rs
src/countries/: mod.rs  repository.rs  router.rs  service.rs
src/errors/: app.rs  auth.rs  mod.rs  repository.rs  service.rs
src/otp/: entities.rs  mod.rs  repository.rs  service.rs
src/security/otp/: repository.rs  service.rs
src/shared/middlewares/: authenticated_request.rs  authentication_middleware.rs  mod.rs  validator.rs
src/users/: adapters.rs  entities.rs  enums.rs  handlers.rs  mod.rs  repositories.rs  router.rs  service.rs
src/utils/: api_request.rs  api_response.rs  env.rs  mod.rs
src/wallet/: adapters.rs  entities.rs  handlers.rs  repository.rs  router.rs  service.rs
test/: app.rs
test/users/: enum.rs
tests/: authentication.rs
ui/: nuxt.config.ts  package-lock.json  package.json
ui/app/: app.vue  desktop-only.vue
ui/app/assets/css/: main.css
ui/app/components/: AppHeader.vue  AppLogo.vue
ui/app/layouts/: default.vue
ui/app/middleware/: desktop-only.ts
ui/app/pages/: index.vue
ui/app/plugins/: resize.client.ts
