[package]
name = "finpay-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib_finpay_rs"
path = "src/lib.rs"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
askama = "0.14.0"
log = "0.4.27"
rand = "0.9.2"
redis = "0.32.4"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"


[dependencies]
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = { version = "0.8.4", features = [
    "macros",
    "multipart",
    "tracing",
    "ws",
] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "migrate",
    "time",
    "chrono",
    "tls-rustls",
] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
openssl = { version = "0.10.73", features = ["vendored"] }
redis = { version = "0.32.4", features = [
    "aio",
    "cluster",
    "connection-manager",
    "tokio-comp",
    "uuid",
] }
serde_json = "1.0.143"
uuid = { version = "1.18.1", features = ["serde", "v4", "v7", "v8"] }
axum-valid = "0.24.0"
