[package]
name = "midgard"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib_midgard"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
axum = { version = "0.8.4", features = [
  "macros",
  "multipart",
  "tracing",
  "ws",
]}
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "migrate",
  "time",
  "chrono",
  "tls-rustls",
]}
tempfile = "3.23.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.1", features = [
  "limit",
  "trace",
  "cors",
  "timeout",
  "sensitive-headers"
]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v7", "v8"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
axum-test = "18.1.0"
fake = { version = "4.4.0", features = ["chrono", "derive", "url", "uuid"] }
mockall = "0.13.1"
