[package]
name = "finpay_redis"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
log = { workspace = true }
openssl = { version = "0.10.73", features = ["vendored"] }
redis = { workspace = true, features = [
    "aio",
    "cluster",
    "connection-manager",
    "tokio-comp",
    "uuid",
] }
finpay_utils = { version = "0.1.0", path = "../finpay_utils" }
