[package]
name = "odin_imagekit"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
odin_utils = { version = "0.1.0", path = "../odin_utils" }
log = "0.4.27"
reqwest = { version = "0.12", features = ["multipart", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true